--- a/G64.ProdutoApi/appsettings.json
+++ b/G64.ProdutoApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"DefaultConnection": "Server=localhost; Database=G64SOAT; Uid=root; Pwd=g64soat"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
