Atualização do Pedido

--- a/G64.PedidoAPI/appsettings.json
+++ b/G64.PedidoAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ApiGateway": {
+        "BaseUrl": "http://localhost:5002"
+    },
     "ConnectionStrings": { "DefaultConnection": "Server=localhost; Database=G64SOATPedido; Uid=root; Pwd=g64soat" },
     "Logging": {
         "LogLevel": {
