--- a/G64.PedidoAPI/G64.PedidoAPI.csproj
+++ b/G64.PedidoAPI/G64.PedidoAPI.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>df3c6ae6-ef1c-41b7-bbc1-fc9e47d8d7ef</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
