--- a/G64.PedidoAPI/docker-compose.yml
+++ b/G64.PedidoAPI/docker-compose.yml
@@ -1,25 +1,41 @@
-﻿version: '3.8'
+﻿version: '3.9'
 
 services:
   pedidoapi:
     image: pedidoapi:latest
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./Dockerfile
     ports:
       - "5000:80"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - CheckoutService__BaseUrl=http://localhost:5432
+      #- "5001:443"
     depends_on:
-      - checkoutservice
-
-  checkoutservice:
-    image: checkoutservice:latest
-    build:
-      context: ./CheckoutService
-      dockerfile: Dockerfile
-    ports:
-      - "5001:80"
+      #- checkoutservice
+      - db
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - CheckoutService__BaseUrl=http://localhost:5432
+    entrypoint: /bin/bash -c "dotnet ef database update && dotnet G64.PedidoAPI.dll"
+    
+  db:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: G64SOATPedido
+      MYSQL_DATABASE: g64soat
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+ 
+  #checkoutservice:
+  #  image: checkoutservice:latest
+  #  build:
+  #    context: ./CheckoutService
+  #    dockerfile: Dockerfile
+  #  ports:
+  #    - "5001:80"
+  #  environment:
+  #    - ASPNETCORE_ENVIRONMENT=Development
+volumes:
+  mysql_data:
