--- a/G64.PedidoAPI/docker-compose.yml
+++ b/G64.PedidoAPI/docker-compose.yml
@@ -1,23 +1,6 @@
 ﻿version: '3.9'
 
 services:
-  pedidoapi:
-    image: pedidoapi:latest
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    ports:
-      - "5000:80"
-      #- "5001:443"
-    depends_on:
-      #- checkoutservice
-      - db
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - CheckoutService__BaseUrl=http://localhost:8080
-    entrypoint: /bin/bash -c "dotnet ef database update && dotnet G64.PedidoAPI.dll"
-    
   db:
     image: mysql:latest
     environment:
@@ -27,6 +10,24 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+  pedidoapi:
+    image: pedidoapi:latest
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    ports:
+      - "5000:80"
+      - "5001:443"
+    depends_on:
+      #- checkoutservice
+      - db
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - CheckoutService__BaseUrl=http://localhost:8080
+      - ConnectionStrings__DefaultConnection=Server=localhost;Database=G64SOATPedido;User=root;Password=g64soat;
+
+    entrypoint: dotnet G64.PedidoAPI.dll"
  
   #checkoutservice:
   #  image: checkoutservice:latest
