Correção migrations docker

--- a/G64.PedidoAPI/appsettings.json
+++ b/G64.PedidoAPI/appsettings.json
@@ -2,7 +2,13 @@
     "ApiGateway": {
         "BaseUrl": "http://localhost:8080"
     },
-    "ConnectionStrings": { "DefaultConnection": "Server=localhost;Port=3306; Database=G64SOATPedido; Uid=root; Pwd=g64soat" },
+    /*"ConnectionStrings": { "DefaultConnection": "Server=localhost;Port=3306; Database=G64SOATPedido; Uid=root; Pwd=g64soat" },*/
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=localhost,1433;Database=sqlserver;User Id=sa;Password=g64soat;"
+        "DefaultConnection": "Data Source=pedido.db"
+
+    },
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
