--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,61 @@
-version: '3.4'
+﻿# version: '3.8'
+
+# services:
+#   app:
+#     image: seu-app:latest
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - "8080:80"
+#     # volumes:
+#     #   - ./data:/app/data
+#     volumes:
+#       - sqlserverdata:/var/opt/mssql
+#     environment:
+#       - ASPNETCORE_ENVIRONMENT=Development
+#     restart: unless-stopped
+#     depends_on:
+#       - migrate
+
+#   migrate:
+#     image: seu-app:latest
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     command: dotnet ef database update
+#     volumes:
+#       # - ./data:/app/data
+#        - sqlserverdata:/var/opt/mssql
+#     environment:
+#       - ASPNETCORE_ENVIRONMENT=Development
+#     entrypoint: ["/bin/bash", "-c", "dotnet ef database update && exit 0"]
+
+version: '3.8'
 
 services:
-  g64.pedidoapi:
-    image: ${DOCKER_REGISTRY-}g64pedidoapi
+  app:
+    image: seu-app:latest
     build:
       context: .
-      dockerfile: G64.PedidoAPI/Dockerfile
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
+    depends_on:
+      - db
+
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: pedidodb
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: secret
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  postgres_data:
+
+
