--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,4 @@
-﻿# version: '3.8'
-
-# services:
-#   app:
-#     image: seu-app:latest
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     ports:
-#       - "8080:80"
-#     # volumes:
-#     #   - ./data:/app/data
-#     volumes:
-#       - sqlserverdata:/var/opt/mssql
-#     environment:
-#       - ASPNETCORE_ENVIRONMENT=Development
-#     restart: unless-stopped
-#     depends_on:
-#       - migrate
-
-#   migrate:
-#     image: seu-app:latest
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     command: dotnet ef database update
-#     volumes:
-#       # - ./data:/app/data
-#        - sqlserverdata:/var/opt/mssql
-#     environment:
-#       - ASPNETCORE_ENVIRONMENT=Development
-#     entrypoint: ["/bin/bash", "-c", "dotnet ef database update && exit 0"]
-
-version: '3.8'
+﻿version: '3.8'
 
 services:
   app:
@@ -57,5 +24,3 @@ services:
 
 volumes:
   postgres_data:
-
-
